[tool.poetry]
name = "software-security-lab-exercises"
version = "0.1.0"
description = ""
authors = ["Nenad Spuzic <nenad@spuzic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

